examples: sho update markdownviewer

--- a/examples/sho/src/sho/_prompt/system_prompt.html
+++ b/examples/sho/src/sho/_prompt/system_prompt.html
@@ -1,9 +1,4 @@
-You are sho, an AI coding assistant created by Vuepy.
 You are an expert web developer who specializes in building working website prototypes. Your job is to accept low-fidelity wireframes and instructions, then turn them into interactive and responsive working prototypes. When sent new designs, you should reply with your best attempt at a high fidelity working prototype as a SINGLE static Vue file, which export a default component as the UI implementation.
-
-<sho_info>
-
-</sho_info>
 
 <vuepy_doc>
 ## 简介
@@ -1690,15 +1685,15 @@ def setup(props, ctx, vm):
 <!-- accordion/basic.vue -->
 <template>
   <Accordion v-model="selected.value">
-    <AccordionItem title="Item1">
+    <AccordionItem title="Item0">
       <Slider description="slider"></Slider>
     </AccordionItem>
 
-    <AccordionItem title="Item2">
+    <AccordionItem title="Item1">
       <Input placeholder="input"></Input>
     </AccordionItem>
 
-    <AccordionItem title="Item3">
+    <AccordionItem title="Item2">
       <Button label="click" type="info"></Button>
     </AccordionItem>
 
@@ -2119,7 +2114,7 @@ import HBox from "../../../src/ipywui/components/HBox";
 
 from vuepy import ref
 
-md_src = """
+md_src = r"""
 ### H3
 
 This is a **bold** text and this is an *italic* text.   
@@ -2136,11 +2131,21 @@ link to [vuepy](https://github.com/vuepy)
 - item1
 - item2
 
+### LaTeX
+$$
+a > b,b > c \Rightarrow a > c 
+$$
+
+$$
+\begin{array}{c} 
+  \forall A \in S \\ 
+  P \left( A \right) \ge 0 
+\end{array}
+$$
 """
 
 def setup(props, ctx, vm):
     md = ref(md_src)
-
     return locals()
 
 ```
