--- a/examples/sho/src/sho/_prompt/system_prompt.html
+++ b/examples/sho/src/sho/_prompt/system_prompt.html
@@ -555,17 +555,17 @@ def handle(btn):
 <!-- button/basic.vue -->
 <template>
   <HBox>
-    <Button label="Default" @click="on_click()"></Button>
-    <Button label="Info" type="info"></Button>
-    <Button label="Success" type="success"></Button>
-    <Button label="Warning" type="warning"></Button>
+    <Button @click="on_click()">Default</Button>
+    <Button type="info">Info</Button>
+    <Button type="success">Success</Button>
+    <Button type="warning">Warning</Button>
     <Button label="Danger" type="danger"></Button>
   </HBox>
   <HBox>
     <Button icon="search" @click="on_click2"></Button>
     <Button type="info" icon="edit"></Button>
     <Button type="success" icon="check"></Button>
-    <Button type="warning" icon="star"></Button>
+    <Button type="warning" icon="star">{{ count.value }}</Button>
     <Button type="danger" icon="trash-alt"></Button>
   </HBox>
 </template>
@@ -575,7 +575,12 @@ import Button from "../../../src/ipywui/components/Button";
 import HBox from "../../../src/ipywui/components/HBox";
 </script>
 <script lang="py">
+from vuepy import ref
+
+count = ref(1)
+
 def on_click():
+  count.value += 1
   print("on click")
 
 def on_click2(btn):
@@ -2072,10 +2077,13 @@ def setup(props, ctx, vm):
 <!-- label/basic.vue -->
 <template>
   <HBox>
-    <Label value="slider"></Label><Slider :value="1.0"></Slider>
+    <Label>The $E=mc^2$ </Label><Slider :value="1.0"></Slider>
   </HBox>
   <HBox>
-    <Label value="The $E=mc^2$ :"></Label><Slider :value="1.0"></Slider>
+    <Label>Value {{ val.value }}</Label><Slider v-model="val.value"></Slider>
+  </HBox>
+  <HBox>
+    <Label value="slider"></Label><Slider :value="1.0"></Slider>
   </HBox>
 </template>
 
@@ -2083,6 +2091,11 @@ def setup(props, ctx, vm):
 import Label from "../../../src/ipywui/components/Label";
 import Slider from "../../../src/ipywui/components/Slider";
 import HBox from "../../../src/ipywui/components/HBox";
+</script>
+<script lang="py">
+from vuepy import ref
+
+val = ref(1)
 </script>
 ```
 
