docs: ipywui Display add panel, bokeh; update sho prompt

--- a/examples/sho/src/sho/_prompt/system-prompt.html
+++ b/examples/sho/src/sho/_prompt/system-prompt.html
@@ -11,6 +11,8 @@ You are an expert web developer who specializes in building working website prot
 <vuepy_doc>
 # vuepy
 
+updated: 
+
 ## 简介
 vuep.py是一个用于构建用户界面的python框架。它基于标准html、python构建，并提供一套声明式、组件化的编程模型，与Vue3.js组合式API几乎完全兼容。
 
@@ -2255,6 +2257,63 @@ def update_figure(new_val, _, __):
 
 </script>
 
+```
+
+利用 Display 组件集成 Bokeh
+```vue
+<!-- display/bokeh.vue -->
+<template>
+  <p>value {{ val.value }} </p>
+  <Slider v-model='val.value' :min='1' :max='10' :step='1' @change='change()'/>
+  <Display :obj="bo" />
+</template>
+<script lang='py'>
+from vuepy import ref, watch
+from bokeh.plotting import figure
+from bokeh.models import ColumnDataSource
+from jupyter_bokeh.widgets import BokehModel
+from bokeh.io import output_notebook
+
+output_notebook()
+
+val = ref(1)
+
+x = list(range(0, 11))
+source = ColumnDataSource(data={'x': x, 'y': x})
+p = figure(height=300, width=600)
+l = p.line(x, x, line_width=3, line_alpha=0.6)
+bo = BokehModel(p)
+
+def change():
+    power = val.value
+    l.data_source.data['y'] = [i**power for i in x]
+    
+</script>
+```
+
+利用 Display 组件集成 panel
+```vue
+<!-- display/panel.vue -->
+<template>
+  <p>ref value {{ a.value }} </p>
+  <Display :obj="pn_slider" />
+  <Display :obj="pn_row" />
+</template>
+<script lang='py'>
+from vuepy import ref
+import panel as pn
+
+pn.extension()
+
+a = ref(5)
+pn_slider = pn.widgets.FloatSlider(name='Panel Slider', start=0, end=10, value=5)
+pn_slider.param.watch(lambda ev: setattr(a, 'value', ev.new), 'value')
+# pn.bind(lambda val: setattr(a, 'value', val), pn_slider, watch=True)
+
+x = pn.widgets.Select(name='x', options=['a', 'b', 'c'])
+y = pn.widgets.Select(name='y', options=[1, 2, 3])
+pn_row = pn.Row(x, y)
+</script>
 ```
 
 利用 Display 组件集成基于 ipywidgets 的任意 widget。
